--- a/app/widgets/Tabs/tabs.css
+++ b/app/widgets/Tabs/tabs.css
@@ -20,6 +20,7 @@
     height:100%; 
     width:100%;
     color: white;
+    text-decoration: none;
 }
 
 .tabs {
